--- a/in.html
+++ b/in.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Embed Card Example</title>
-    <script src="https://unpkg.com/react/umd/react.production.min.js"></script>
-    <script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"></script>
-    <script src="./dist/embed/script.umd.cjs"></script> <!-- Your Vite-built script -->
+    <title>Embed Card</title>
+    <script src="./dist/embed/script.umd.cjs"></script> <!-- Self-contained script -->
 </head>
 <body>
     <div id="profile"></div>
