added readme and change the div id

--- a/in.html
+++ b/in.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <title>Embed Card</title>
-    <script src="./dist/embed/script.umd.cjs"></script> <!-- Self-contained script -->
+    <script src="https://opire-challenge.vercel.app/embed/script.umd.cjs"></script> <!-- Self-contained script -->
 </head>
 <body>
-    <div id="profile"></div>
+    <div id="opire-dev-card"></div>
 </body>
 </html>
